[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cards/Hand.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PackedVector2Array( -87.8597, 71.936, 87.8597, -71.936, -192, 0, -87.8335, -71.8836, 87.8335, 71.8836, 192, 0 )
}

[node name="Hand" type="Node2D"]
position = Vector2( 448, 320 )
script = ExtResource( 1 )

[node name="Cards" type="Node2D" parent="."]

[node name="LeftAnchor" type="Node2D" parent="."]
position = Vector2( -128, 64 )
scale = Vector2( 0.1, 0.5 )

[node name="RightAnchor" type="Node2D" parent="."]
position = Vector2( 128, 64 )
scale = Vector2( 0.1, 0.5 )

[node name="Path3D" type="Path2D" parent="."]
position = Vector2( -7.62939e-06, 16 )
curve = SubResource( 1 )

[node name="PositionSetter" type="PathFollow2D" parent="Path3D"]
position = Vector2( -192, 0 )
rotation = -0.671997
loop = false

[node name="PlayerPanel" type="Panel" parent="."]
offset_left = -80.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 56.0

[node name="Name" type="Label" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1111111111's Hand"
align = 1
valign = 1
